[gd_scene load_steps=5 format=3 uid="uid://xa8xyu6q2tib"]

[ext_resource type="Script" uid="uid://bgbihn1hbba4h" path="res://scripts/game.gd" id="1_ryrav"]
[ext_resource type="Script" uid="uid://cjfdgsunpmtvf" path="res://scripts/menus/MainMenu.gd" id="4_eow3j"]
[ext_resource type="Script" uid="uid://chesh75bskg8a" path="res://scripts/menus/SelectionMenu.gd" id="5_j5wjh"]
[ext_resource type="Script" uid="uid://8v5j2cdyxber" path="res://scripts/menus/OnlineMenu.gd" id="6_vef74"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ryrav")

[node name="BoardContainer" type="Node2D" parent="."]

[node name="MainMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_eow3j")

[node name="LabelTitle" type="Label" parent="MainMenu"]
layout_mode = 0
offset_left = 149.0
offset_top = 116.0
offset_right = 1875.0
offset_bottom = 281.0
theme_override_font_sizes/font_size = 120
text = "Sélectionnez un mode de jeu :"

[node name="ButtonOnline" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 176.0
offset_top = 635.0
offset_right = 728.0
offset_bottom = 806.0
theme_override_font_sizes/font_size = 90
text = "En ligne"

[node name="ButtonLocal" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 1265.0
offset_top = 651.0
offset_right = 1817.0
offset_bottom = 822.0
theme_override_font_sizes/font_size = 90
text = "En local"

[node name="SelectionMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 416.0
offset_top = 383.0
offset_right = 1625.0
offset_bottom = 1592.0
script = ExtResource("5_j5wjh")

[node name="LabelChoose" type="Label" parent="SelectionMenu"]
layout_mode = 0
offset_left = -74.0
offset_top = -290.0
offset_right = 1271.0
offset_bottom = -103.0
theme_override_font_sizes/font_size = 100
text = "Choisissez votre camp !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelP1" type="Label" parent="SelectionMenu"]
layout_mode = 0
offset_left = 25.0
offset_top = -117.0
offset_right = 381.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 80
text = "Joueur 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectionP1" type="HBoxContainer" parent="SelectionMenu"]
layout_mode = 0
offset_left = 4.0
offset_top = 71.0
offset_right = 556.0
offset_bottom = 471.0

[node name="ButtonLeftP1" type="Button" parent="SelectionMenu/SelectionP1"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
text = "<"

[node name="ImageSelectP1" type="TextureRect" parent="SelectionMenu/SelectionP1"]
layout_mode = 2

[node name="ButtonRightP1" type="Button" parent="SelectionMenu/SelectionP1"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
text = ">"

[node name="LabelP2" type="Label" parent="SelectionMenu"]
layout_mode = 0
offset_left = 859.0
offset_top = -95.0
offset_right = 1180.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 80
text = "Joueur 2
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectionP2" type="HBoxContainer" parent="SelectionMenu"]
layout_mode = 0
offset_left = 809.0
offset_top = 76.0
offset_right = 1377.0
offset_bottom = 476.0

[node name="ButtonLeftP2" type="Button" parent="SelectionMenu/SelectionP2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
text = "<"

[node name="ImageSelectP2" type="TextureRect" parent="SelectionMenu/SelectionP2"]
layout_mode = 2

[node name="ButtonRightP2" type="Button" parent="SelectionMenu/SelectionP2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
text = ">"

[node name="ButtonStart" type="Button" parent="SelectionMenu"]
layout_mode = 0
offset_left = 10.0
offset_top = 1035.0
offset_right = 1212.0
offset_bottom = 1248.0
theme_override_font_sizes/font_size = 150
text = "Lancer le débat !"

[node name="ButtonBack" type="Button" parent="SelectionMenu"]
layout_mode = 0
offset_left = 333.0
offset_top = 1288.0
offset_right = 885.0
offset_bottom = 1459.0
theme_override_font_sizes/font_size = 90
text = "Retour"

[node name="OnlineMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_vef74")

[node name="LabelOnlineTitle" type="Label" parent="OnlineMenu"]
layout_mode = 0
offset_left = 149.0
offset_top = 116.0
offset_right = 1875.0
offset_bottom = 281.0
theme_override_font_sizes/font_size = 120
text = "Sélectionnez un mode de jeu :"

[node name="ButtonCreate" type="Button" parent="OnlineMenu"]
layout_mode = 0
offset_left = 176.0
offset_top = 635.0
offset_right = 728.0
offset_bottom = 806.0
theme_override_font_sizes/font_size = 90
text = "Créer partie"

[node name="ButtonRefresh" type="Button" parent="OnlineMenu"]
visible = false
layout_mode = 0
offset_left = 1265.0
offset_top = 651.0
offset_right = 1817.0
offset_bottom = 822.0
theme_override_font_sizes/font_size = 90
text = "Rafrâchir"

[node name="LobbyContainer" type="VBoxContainer" parent="OnlineMenu"]
layout_mode = 0
offset_left = 1259.0
offset_top = 643.0
offset_right = 1835.0
offset_bottom = 1356.0

[node name="LabelStatus" type="Label" parent="OnlineMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="SelectionContainer" type="Control" parent="OnlineMenu"]
custom_minimum_size = Vector2(1600, 1600)
anchors_preset = 0
offset_left = 194.0
offset_top = 198.0
offset_right = 1794.0
offset_bottom = 1798.0

[node name="ButtonBack" type="Button" parent="OnlineMenu/SelectionContainer"]
visible = false
layout_mode = 0
offset_left = 491.0
offset_top = 1397.0
offset_right = 1043.0
offset_bottom = 1568.0
theme_override_font_sizes/font_size = 90
text = "Retour"

[node name="HBoxContainer" type="HBoxContainer" parent="OnlineMenu/SelectionContainer"]
layout_mode = 0
offset_left = 505.0
offset_top = 210.0
offset_right = 728.0
offset_bottom = 806.0

[node name="SelectionP1" type="HBoxContainer" parent="OnlineMenu/SelectionContainer/HBoxContainer"]
layout_mode = 2

[node name="ButtonLeft" type="Button" parent="OnlineMenu/SelectionContainer/HBoxContainer/SelectionP1"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
text = "<"

[node name="ImageSelect" type="TextureRect" parent="OnlineMenu/SelectionContainer/HBoxContainer/SelectionP1"]
layout_mode = 2

[node name="ButtonRight" type="Button" parent="OnlineMenu/SelectionContainer/HBoxContainer/SelectionP1"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
text = ">"

[node name="LabelPlayerName" type="Label" parent="OnlineMenu/SelectionContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 0
offset_left = 490.0
offset_top = 850.0
offset_right = 890.0
offset_bottom = 900.0
theme_override_font_sizes/font_size = 40
text = "Votre pseudo:"

[node name="InputPlayerName" type="LineEdit" parent="OnlineMenu/SelectionContainer"]
custom_minimum_size = Vector2(500, 80)
layout_mode = 0
offset_left = 490.0
offset_top = 910.0
offset_right = 990.0
offset_bottom = 990.0
theme_override_font_sizes/font_size = 40
placeholder_text = "Entrez votre pseudo"
max_length = 20

[node name="LabelGameName" type="Label" parent="OnlineMenu/SelectionContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 0
offset_left = 490.0
offset_top = 1000.0
offset_right = 890.0
offset_bottom = 1050.0
theme_override_font_sizes/font_size = 40
text = "Nom de la partie:"

[node name="InputGameName" type="LineEdit" parent="OnlineMenu/SelectionContainer"]
custom_minimum_size = Vector2(500, 80)
layout_mode = 0
offset_left = 490.0
offset_top = 1060.0
offset_right = 990.0
offset_bottom = 1140.0
theme_override_font_sizes/font_size = 40
placeholder_text = "Entrez le nom de la partie"
max_length = 30

[node name="ButtonConfirmCreate" type="Button" parent="OnlineMenu/SelectionContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 0
offset_left = 490.0
offset_top = 1200.0
offset_right = 1062.0
offset_bottom = 1350.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 75
text = "Lancer la partie"
